# data-request-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish-pypi.yaml
ci/requirements/: environment.yml
data_request/: __init__.py  cleaning.py  const.py  coordinates.py  table_creation.py
data_request/tests/: test_data_request.py
data_request_tools/: __init__.py  attributes.py  cli.py  const.py  table_creation.py  utils.py
data_request_tools/tests/: test_data_request.py
